# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "git-tree"
authors = ["Johnathan Van Why <jrvanwhy@google.com>"]
categories = ["command-line-utilities", "development-tools"]
description = """Tool that invokes git log --graph, automatically determining \
                 relevant commits to include."""
edition = "2021"
keywords = ["git"]
license = "Apache-2.0"
repository = "https://github.com/google/git-tree"
version = "0.1.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
allow_attributes = "allow"
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
expect_used = "allow"
get_unwrap = "allow"
implicit_return = "allow"
iter_over_hash_type = "allow"
iter_with_drain = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
single_call_fn = "allow"
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "allow"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
