# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Johnathan Van Why <jrvanwhy@google.com>"]
categories = ["command-line-utilities", "visualization"]
description = """Tool that invokes git log --graph, automatically determining \
                 relevant commits to include."""
edition = "2018"
keywords = ["git"]
license = "Apache-2.0"
name = "git-tree"
version = "2.0.0"

[[bin]]
name = "git-tree"
path = "main.rs"

[dependencies]
clap = "2.32.0"
fnv = "1.0.7"
git2 = "0.20.0"
gitloggraph = { path = "../gitloggraph", version = "1.0.0" }

[profile.release]
codegen-units = 1
lto = true
# Load time is a significant part of git-tree's execution, and the rest is
# largely blocked on I/O. Making the binary smaller is probably more important
# than runtime CPU efficiency.
# TODO: Benchmark to confirm this.
opt-level = "s"
panic = "abort"
